# OpenVR-Driver

./: .gitignore  CMakeLists.txt  README.md
driver_files/driver/websocket_trackers/: driver.vrdrivermanifest
driver_files/driver/websocket_trackers/resources/input/: example_controller_bindings.json  example_tracker_bindings.json
driver_files/driver/websocket_trackers/resources/localization/: localization.json
driver_files/driver/websocket_trackers/resources/rendermodels/example_controller/: example_controller.mtl
driver_files/driver/websocket_trackers/resources/ssl/: cert.txt  dh.txt  key.txt
driver_files/driver/websocket_trackers/resources/webserver/: ServerMessaging.js  index.html  send-echo-ssl.js
driver_files/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp
driver_files/src/Native/: DriverFactory.cpp  DriverFactory.hpp
libraries/boost_1_69_0/: libboost_chrono-vc141-mt-gd-x32-1_69.lib  libboost_chrono-vc141-mt-gd-x64-1_69.lib  libboost_chrono-vc141-mt-x32-1_69.lib  libboost_chrono-vc141-mt-x64-1_69.lib  libboost_date_time-vc141-mt-gd-x32-1_69.lib  libboost_date_time-vc141-mt-gd-x64-1_69.lib  libboost_date_time-vc141-mt-x32-1_69.lib  libboost_date_time-vc141-mt-x64-1_69.lib  libboost_thread-vc141-mt-x32-1_69.lib  libboost_thread-vc141-mt-x64-1_69.lib
